# c4utils

./: .gitignore  Dockerfile  README.md  benchmark_containerized_agents.py  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
.devcontainer/: devcontainer.json  docker-compose.yml
c4utils/: Dockerfile  Dockerfile_fixed_time  agent_interface.py  c4_types.py  match.py  rules.py  types.py
c4utils/agent_sandbox/: agent_interface.py  agent_runner.py  timeout.py
c4utils/examples/: __init__.py  fixed_time_agent.py  random_agent.py  random_timeout_agent.py  time_example_agents.py
c4utils/game/: rules.py
c4utils/tournament/: match.py
examples/: Dockerfile_random  __init__.py  agent_fixed_time.def  agent_random.def  usage.md
examples/agents/: fixed_time_agent.py  random_agent.py  random_timeout_agent.py
examples/timing/: time_example_agents.py
tests/: context.py  pytest.ini  test_match.py  test_rules.py  test_sandbox.py
